swagger-docs and new resource customers
